--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>RMS Book</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>RMS Book</h1>
-  <p>GitHub Pages로 만든 전자책입니다.</p>
+  <div class="sidebar">
+    <h2>목차</h2>
+    <ul>
+      <li><a href="index.html">홈</a></li>
+      <li><a href="chapter1.html">1장. 다익스트라 알고리즘</a></li>
+      <li><a href="chapter2.html">2장. 그래프 이론</a></li>
+      <li><a href="chapter3.html">3장. 구현 예제</a></li>
+    </ul>
+  </div>
+
+  <div class="content">
+    <h1>RMS Book에 오신 것을 환영합니다</h1>
+    <p>이 사이트는 HTML + CSS만으로 만든 전자책 예제입니다.</p>
+  </div>
 </body>
 </html>
