--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>목차</h2>
     <ul>
       <li><a href="index.html">홈</a></li>
-      <li><a href="chapter1.html">1장. 다익스트라 알고리즘</a></li>
-      <li><a href="chapter2.html">2장. 그래프 이론</a></li>
+      <li><a href="chapter1.html">1장. RMS란?</a></li>
+      <li><a href="chapter2.html">2장. IN/OUT MOVEMENTS</a></li>
       <li><a href="chapter3.html">3장. 구현 예제</a></li>
     </ul>
   </div>
