--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="content">
+    <h1>RMS Book에 오신 것을 환영합니다</h1>
+    <p>이 사이트는 HTML + CSS만으로 만든 전자책 예제입니다.</p>
+  </div>
+  
   <div class="sidebar">
     <h2>목차</h2>
     <ul>
       <li><a href="index.html">홈</a></li>
       <li><a href="chapter1.html">1장. RMS란?</a></li>
       <li><a href="chapter2.html">2장. IN/OUT MOVEMENTS</a></li>
-      <li><a href="chapter3.html">3장. 구현 예제</a></li>
+      <li><a href="chapter3.html">3장. Availbility</a></li>
+      <li><a href="chapter3.html">4장. BooKing</a></li>
+      <li><a href="chapter3.html">5장. Clean Screen</a></li>
+      <li><a href="chapter3.html">6장. ...</a></li>
+      <li><a href="chapter3.html">7장. ...</a></li>
     </ul>
   </div>
 
-  <div class="content">
-    <h1>RMS Book에 오신 것을 환영합니다</h1>
-    <p>이 사이트는 HTML + CSS만으로 만든 전자책 예제입니다.</p>
-  </div>
 </body>
 </html>
