--- a/index.html
+++ b/index.html
@@ -4,26 +4,34 @@
   <meta charset="UTF-8">
   <title>RMS Book</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="content">
-    <h1>RMS Book에 오신 것을 환영합니다</h1>
-    <p>이 사이트는 HTML + CSS만으로 만든 전자책 예제입니다.</p>
-  </div>
-  
-  <div class="sidebar">
-    <h2>목차</h2>
-    <ul>
-      <li><a href="index.html">홈</a></li>
-      <li><a href="chapter1.html">1장. RMS란?</a></li>
-      <li><a href="chapter2.html">2장. IN/OUT MOVEMENTS</a></li>
-      <li><a href="chapter3.html">3장. Availbility</a></li>
-      <li><a href="chapter4.html">4장. BooKing</a></li>
-      <li><a href="chapter5.html">5장. Clean Screen</a></li>
-      <li><a href="chapter6.html">6장. ...</a></li>
-      <li><a href="chapter7.html">7장. ...</a></li>
-    </ul>
-  </div>
+  <aside class="sidebar">
+    <div class="sidebar-header">
+      <h1>RMS Book</h1>
+      <p>전자책 예제</p>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">홈</a></li>
+        <li><a href="chapter1.html">1장. RMS란?</a></li>
+        <li><a href="chapter2.html">2장. IN/OUT MOVEMENTS</a></li>
+        <li><a href="chapter3.html">3장. Availability</a></li>
+        <li><a href="chapter4.html">4장. Booking</a></li>
+        <li><a href="chapter5.html">5장. Clean Screen</a></li>
+        <li><a href="chapter6.html">6장. ...</a></li>
+        <li><a href="chapter7.html">7장. ...</a></li>
+      </ul>
+    </nav>
+  </aside>
 
+  <main class="content">
+    <section class="welcome-card">
+      <h2>RMS Book에 오신 것을 환영합니다</h2>
+      <p>이 사이트는 HTML + CSS만으로 만든 현대적인 전자책 예제입니다.</p>
+      <p>좌측 메뉴에서 장을 선택하여 내용을 확인하세요.</p>
+    </section>
+  </main>
 </body>
 </html>
