--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>RMS 프론트근무자 가이드북</title>
+  <title>1장. RMS</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/include.js" defer></script>
 </head>
@@ -11,10 +11,15 @@
   <div data-include="templates/sidebar.html"></div>
 
   <main class="content">
-    <section class="welcome-card">
-      <h1>RMS 프론트 근무자 가이드북에 오신것을 환영합니다</h1>
-      <p>좌측 메뉴에서 장을 선택하여 내용을 확인하세요.</p>
-    </section>
+    <h1>1장. RMS</h1>
+    <p>Ascott Limited가 전 세계 자사 숙소 운영에 도입한 클라우드 기반 부동산/숙박 관리 시스템입니다...</p>
+    <pre>
+import heapq
+
+def dijkstra(graph, start):
+    # 코드 예제
+    ...
+    </pre>
   </main>
 </body>
 </html>
